--- a/tutorial/PsyNeuLink_Tutorial.ipynb
+++ b/tutorial/PsyNeuLink_Tutorial.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "## How to get PsyNeuLink\n",
     "\n",
-    "PsyNeuLink is compatible with python versions >= 3.5, and is available through PyPI:\n",
+    "PsyNeuLink is compatible with python versions >= 3.6, and is available through PyPI:\n",
     "\n",
     "```python\n",
     "pip install psyneulink\n",
@@ -30,14 +30,15 @@
     "\n",
     "## Installation\n",
     "\n",
-    "To install the package, navigate to the cloned directory in a terminal, switch to your preferred python3 environment, then run the command __\"pip install .\"__ (make sure to include the period and to use the appropriate pip/pip3 command for python 3.5). All prerequisite packages will be automatically added to your enviroment.\n",
+    "To install the package, navigate to the cloned directory in a terminal, switch to your preferred python3 environment, then run the command __\"pip install .\"__ (make sure to include the period and to use the appropriate pip/pip3 command for python 3.6). All prerequisite packages will be automatically added to your enviroment.\n",
     "\n",
     "For the curious, these are:\n",
     "* numpy\n",
     "* matplotlib\n",
     "* toposort\n",
-    "* mpi4py\n",
-    "* typecheck-decorator"
+    "* typecheck-decorator\n",
+    "\n",
+    "mpi4py is an optional dependency. "
    ]
   },
   {
