comment out matplotlib inline

--- a/tutorial/PsyNeuLink Tutorial.ipynb
+++ b/tutorial/PsyNeuLink Tutorial.ipynb
@@ -33,12 +33,13 @@
     "To install the package, navigate to the cloned directory in a terminal, switch to your preferred python3 environment, then run the command __\"pip install .\"__ (make sure to include the period and to use the appropriate pip/pip3 command for python 3.6). All prerequisite packages will be automatically added to your enviroment.\n",
     "\n",
     "For the curious, these are:\n",
-    "* numpy\n",
+    "* numpy (version 1.16)\n",
     "* matplotlib\n",
-    "* toposort\n",
-    "* typecheck-decorator\n",
-    "\n",
-    "mpi4py is an optional dependency. "
+    "* toposort (version 1.4)\n",
+    "* typecheck-decorator (version 1.2) \n",
+    "* pillow \n",
+    "* llvmlite\n",
+    "* mpi4py (optional) "
    ]
   },
   {
@@ -63,7 +64,7 @@
    "source": [
     "### Imports and file structure\n",
     "\n",
-    "The following code block will import the necessary components for basic neural network models in PsyNeuLink. In particular, we need tools for handling *[systems](https://princetonuniversity.github.io/PsyNeuLink/System.html)*, *[processes](https://princetonuniversity.github.io/PsyNeuLink/Process.html)*, the set of specific *[mechanisms](https://princetonuniversity.github.io/PsyNeuLink/Mechanism.html)* that will make up our networks, and the *[projections](https://princetonuniversity.github.io/PsyNeuLink/Projection.html)* to connect them. We also import basic prerequisites and set up the jupyter environment for visualization."
+    "The following code blocks will import psyneulink and set up the jupyter environment for visualization."
    ]
   },
   {
@@ -109,7 +110,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "# %matplotlib inline"
    ]
   },
   {
