• Documentation:   - mods to BasicsAndSampler

--- a/tutorial/PsyNeuLink Tutorial.ipynb
+++ b/tutorial/PsyNeuLink Tutorial.ipynb
@@ -5,11 +5,16 @@
    "source": [
     "## Tutorial Overview\n",
     "\n",
-    "This tutorial is meant to get you accustomed to the structure of PsyNeuLink and be able to construct basic models. Starting with a simple 1-to-1 transformation, we will build up to making the Stroop model from Cohen et al. (1990). Let's get started!\n",
+    "This tutorial provides an introduction to the structure of PsyNeuLink, and basic methods used for constructing and \n",
+    "running a model.  It starts with a simple encoding network, and builds up to more complex models involving control, \n",
+    "learning, and hierarchcally organized (nested) structures.  It assumes basic knowledge of Python, and of fundamental \n",
+    "mathematical concepts  relevant to computational modeling in cognitive neuroscience (such as vectors, matrices, \n",
+    "the logistic function, etc.).  See `_Getting_Started <WORKBOOK>`_ for useful introductions to such material. \n",
     "\n",
+    " \n",
     "### Imports and file structure\n",
     "\n",
-    "The following code blocks will import psyneulink and set up the jupyter environment for visualization."
+    "The following code blocks will import psyneulink and set up your jupyter environment for visualization."
    ],
    "metadata": {
     "collapsed": false,
