Docs/basics and sampler/update for workbook (#1222)
* -

* • Basics and Sampler
  - udpate for Composition / eliminate refs to System & Process

* -

* -

* -

* • MappingProjection
    docstring mods

* • Documentation:
  - mods to index re: installation

* • Documentation:
  - mods to BasicsAndSampler

* -

* -

* -

* -

* • ContentAddressableMemory
  - mods to docstrings

* -

* -

* -

* • ControlMechanism:
  changed default for objective_mechanism arg to None

* • ModulatoryMechanism
  _instantiate_output_states:  modified so that:
     if number of modulatory_signals equals the number of items in the
     function's value, then one-to-one (sequential) assignments are made;
     if function's value has only one item but there are
     multiple modulatory_signals, they are all assigned to that one item;
     otherwise use existing specs.

* • ModulatoryMechanism
  _instantiate_output_states:  modified so that:
     if number of modulatory_signals equals the number of items in the
     function's value, then one-to-one (sequential) assignments are made;
     if function's value has only one item but there are
     multiple modulatory_signals, they are all assigned to that one item;
     otherwise use existing specs.

* • ModulatoryMechanism,
  - added _regsiter_modulatory_signal_type()
• ControlMechanism, GatingMechaism
  - _instantiate_output_state: added to be able to call
    _regsiter_modulatory_signal_type

* • ModulatoryMechanism,
  - added _regsiter_modulatory_signal_type()
• ControlMechanism, GatingMechaism
  - _instantiate_output_state: added to be able to call
    _regsiter_modulatory_signal_type

* -

* • ModulatoryMechanism
  - added _instantiate_mdoulatory_signals:
     if number of modulatory_signals equals the number of items in the
     function's value, then one-to-one (sequential) assignments are made;
     if function's value has only one item but there are
     multipl

--- a/tutorial/PsyNeuLink Tutorial.ipynb
+++ b/tutorial/PsyNeuLink Tutorial.ipynb
@@ -2,70 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "H6ZYZf4adoW6",
-    "colab_type": "text"
-   },
    "source": [
-    "# Welcome to PsyNeuLink\n",
-    "\n",
-    "PsyNeuLink is an integrated language and toolkit for creating cognitive models. It decreases the overhead required for cognitive modeling by providing standard building blocks (DDMS, Neural Nets, etc.) and the means to connect them together in a single environment. PsyNeuLink is designed to make the user think about computation in a \"mind/brain-like\" way while imposing minimal constraint on the type of models that can be implemented."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "V7laEcFxdoW7",
-    "colab_type": "text"
-   },
-   "source": [
-    "## How to get PsyNeuLink\n",
-    "\n",
-    "PsyNeuLink is compatible with python versions >= 3.6, and is available through PyPI:\n",
-    "\n",
-    "```python\n",
-    "pip install psyneulink\n",
-    "```\n",
-    "Or you can clone the github repo [here](https://github.com/PrincetonUniversity/PsyNeuLink). Download the package with the green \"Clone or download\" button on the right side of the page and \"Download ZIP.\" Open the version of this Tutorial in the cloned folder before continuing on.\n",
-    "\n",
-    "## Installation\n",
-    "\n",
-    "To install the package, navigate to the cloned directory in a terminal, switch to your preferred python3 environment, then run the command __\"pip install .\"__ (make sure to include the period and to use the appropriate pip/pip3 command for python 3.6). All prerequisite packages will be automatically added to your enviroment.\n",
-    "\n",
-    "For the curious, these are:\n",
-    "* numpy (version 1.16)\n",
-    "* matplotlib\n",
-    "* toposort (version 1.4)\n",
-    "* typecheck-decorator (version 1.2) \n",
-    "* pillow \n",
-    "* llvmlite\n",
-    "* mpi4py (optional) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "vK3d3A4NdoW8",
-    "colab_type": "text"
-   },
-   "source": [
-    "\n",
     "## Tutorial Overview\n",
     "\n",
-    "This tutorial is meant to get you accustomed to the structure of PsyNeuLink and be able to construct basic models. Starting with a simple 1-to-1 transformation, we will build up to making the Stroop model from Cohen et al. (1990). Let's get started!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "6skRbr-sdoW9",
-    "colab_type": "text"
-   },
-   "source": [
+    "This tutorial provides an introduction to the structure of PsyNeuLink, and basic methods used for constructing and \n",
+    "running a model.  It starts with a simple encoding network, and builds up to more complex models involving control, \n",
+    "learning, and hierarchcally organized (nested) structures.  It assumes basic knowledge of Python, and of fundamental \n",
+    "mathematical concepts  relevant to computational modeling in cognitive neuroscience (such as vectors, matrices, \n",
+    "the logistic function, etc.).  See `_Getting_Started <WORKBOOK>`_ for useful introductions to such material. \n",
+    "\n",
+    " \n",
     "### Imports and file structure\n",
     "\n",
-    "The following code blocks will import psyneulink and set up the jupyter environment for visualization."
-   ]
+    "The following code blocks will import psyneulink and set up your jupyter environment for visualization."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -1509,6 +1465,15 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
