--- a/docs/source/introductory_material/quickstart/notebooks/quickstart.ipynb
+++ b/docs/source/introductory_material/quickstart/notebooks/quickstart.ipynb
@@ -87,6 +87,15 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "The Composition connects the Mechanisms into a pathway that form a graph, which can be shown using its `show_graph\n",
+    "<ShowGraph.show_graph>` method:"
+   ],
+   "id": "58adbb022b5b9078"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "\n",
     "\n",
     "\n",
